[tool.poetry]
name = "atcoder"
version = "0.1.0"
description = ""
authors = ["Hinata Yoshida <h-yoshida@toki.waseda.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
online-judge-tools = "^11.5.1"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
